--- a/les4/2/index4-2.html
+++ b/les4/2/index4-2.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="mmmain.css">
 </head>
 <body>
-
+<div class="header"></div>
+<div class="nav"></div>
+<div class="block">
+    <div class="main"></div>
+    <div class="aside"></div>
+</div>
+<div class="footer"></div>
 </body>
 </html>
