--- a/les5/1/index4.html
+++ b/les5/1/index4.html
@@ -9,10 +9,10 @@
 <body>
 
 
-<div class="xxx">
-    <div class="a"></div>
-    <div class="b"></div>
-    <div class="c"></div>
+<div class="xxx width1600">
+    <div class="a width1600 height600"></div>
+    <div class="b height600"></div>
+    <div class="c height600"></div>
 </div>
 
 </body>
