--- a/les6/2-2/index4-2.2.html
+++ b/les6/2-2/index4-2.2.html
@@ -3,6 +3,9 @@
 <head>
     <link rel="stylesheet" type="text/css" href="maiin.css">
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>T</title>
     <link rel="stylesheet" href="maiin.css">
 </head>
