--- a/les8/index8.html
+++ b/les8/index8.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -102,7 +102,8 @@
             <div class="col-xl-5 first-screen-left">
                 <h2>ENERGIEEFFIZIENZ IM FOKUS</h2>
                 <p class="first-screen-text-two">
-                    Bei der Anschaffung sollte deshalb besonders auf <span class="fw-bold">energieeffiziente Systeme </span>geachtet werden, denn die
+                    Bei der Anschaffung sollte deshalb besonders auf <span
+                        class="fw-bold">energieeffiziente Systeme </span>geachtet werden, denn die
                     Betriebskosten der Anlage überschreiten
                     erfahrungsgemäß über die Lebensdauer hinweg die einmaligen Anschaffungskosten um ein vielfaches.
                 </p>
@@ -116,6 +117,26 @@
                 <img src="image/Multistage.png" alt="Multistage">
             </div>
         </div>
+
+        <div class="row flex-row-reverse" style="background:#163DA1">
+            <div class="col-xl-5 first-screen-center">
+                <h2 class="text-white">MODERNSTE STANDARDS</h2>
+                <br/>
+                <p class="text-white">Aktuelle Richtlinien und Verordnungen bezüglich des <span class="fw-bold">Kältemittel Phase-Downs </span>
+                    müssen berücksichtigt werden. Der langfristige Einsatz des Kältemittels muss sowohl nach
+                    ökonomischen als auch strategischen Gesichtspunkten entschieden werden.</p>
+                <br/>
+                <p class="text-white">
+                    Alle unsere Kältemaschinen entsprechen dem modernsten Stand der Technik und werden in den
+                    unterschiedlichsten Branchen eingesetzt. Unser Angebot umfasst ein <span class="fw-bold"> breites Sortiment an natürlichen
+                    und frigenen Kältemitteln</span>,
+                    die den aktuellsten Normen und Verordnungen entsprechen.</p>
+            </div>
+            <div class="col-xl-6 d-flex align-items-center">
+                <img src="image/asv.png" alt="asv">
+            </div>
+        </div>
+
     </div>
 </div>
 
