--- a/les8/index8.html
+++ b/les8/index8.html
@@ -136,17 +136,72 @@
                 <img src="image/asv.png" alt="asv">
             </div>
         </div>
+        <div class="row flex-row">
+            <div class="col-xl-4 first-screen-center" style="margin-left: 70px">
+                <h2 style="color: #1652AC; font-size: x-large">Unsere Spezialität besteht aus unseren Kaltwassersätzen
+                    mit integrierter
+                    Freikühleinheit.</h2>
+                <br/>
+                <p>Doppelkanal Mikrochannel Wärmetauscher kühlen das Prozesswasser energiesparend über ambiente
+                    Umgebungsluft.
+                </p>
+                <br/>
+                <p><span class="fw-bold">Nur bei heißen Außentemperaturen erfolgt die Umschaltung auf Kompressionskälteerzeugung. Diese
+                    Maximierung der Freikühlzeit erzielt größtmögliche Kosteneinsparungen</span>
+                    auch bei kleinen Nennleistungen.</p>
+            </div>
+            <div class="col-xl-6" style="margin-left: -150px">
+                <img src="image/Icon.png" alt="Icon">
+            </div>
+        </div>
+        <div style="background: #FBFBFC">
+            <div class="text-center" style="font-size: xxx-large; font-family: BBC Reith Sans" :>IHRE VORTEILER</div>
+            <br/>
+            <div class="d-flex justify-content-md-around">
+                <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
+                    <img src="image/Group_63.png" alt="Group_63">Geringe Stellfläche
+                </div>
+                <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
+                    <img src="image/Vector.png" alt="Vector">Mit und ohne integrierter Freikühlung
+                </div>
+                <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
+                    <img src="image/vec.png" alt="vec">Für Außentemperaturen bis +55°C
+                </div>
+            </div>
+            <div class="d-flex justify-content-md-around">
+                <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
+                    <img src="image/qwe.png" alt="qwe">Für Außen- und Innenaufstellung erhältlich
+                </div>
+                <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
+                    <img src="image/qwee.png" alt="qwee">Betriebsbereit bei Anlieferung
+                </div>
+                <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
+                    <img src="image/qweee.png" alt="qweee">Automatische Freikühlschaltung für verringerten
+                    Energieverbrauch
+                </div>
+            </div>
+            <div class="d-flex justify-content-md-around">
+                <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
+                    <img src="image/zx.png" alt="zx">Robustes Gehäuse für Außenaufstellung
+                <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
+                    <img src="image/zxc.png" alt="zxc">Geringe Schallemissionen
+                </div>
+                <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
+                    <img src="image/zxcv.png" alt="zxcv">Wetterfest und Langlebig
+                </div>
+            </div>
 
+
+        </div>
     </div>
-</div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
 
 </body>
 </html>
