--- a/les8/index8.html
+++ b/les8/index8.html
@@ -183,11 +183,17 @@
             <div class="d-flex justify-content-md-around">
                 <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
                     <img src="image/zx.png" alt="zx">Robustes Gehäuse für Außenaufstellung
+                </div>
                 <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
                     <img src="image/zxc.png" alt="zxc">Geringe Schallemissionen
                 </div>
                 <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
                     <img src="image/zxcv.png" alt="zxcv">Wetterfest und Langlebig
+                </div>
+            </div>
+            <div>
+                <div class="infoBlocks align-items-center d-flex justify-content-xl-center">
+                    <img src="image/zxcvb.png" alt="zxcvb">Erhöhte Betriebssicherheit
                 </div>
             </div>
 
