--- a/les8/index8.html
+++ b/les8/index8.html
@@ -199,15 +199,72 @@
 
 
         </div>
+        <div style="background: #FBFBFC"><br/>
+            <div class="text-center" style="font-size: xxx-large;">HAUPTMERKMALE</div>
+            <br/>
+            <br/>
+            <div class="row d-flex justify-content-xl-center pSettings">
+                <div class="col-xl-5">
+                    <p>① 25 verschiedene Modelle von <span class="fw-bold">6 kW bis 600 kW</span> Kühlleistung</p>
+
+                    <p>② Volumenströme von <span class="fw-bold">1,5 m³/h bis 140 m³/h</span></p>
+
+                    <p>③ Auswahl aus <span class="fw-bold">50 verschiedenen Prozesspumpen</span> im Hochfluss-
+                        und Hochdruckbereich</p>
+
+                    <p>④ Kompakteinheiten mit <span class="fw-bold">integrierten Pumpen, Drucktanks, Filtern,
+                        Steuerungen</span> (optional mit Reservepumpe)</p>
+
+                    <p>⑤ <span class="fw-bold">Mikrochannel Verflüssiger</span> für höchste Energieeffizienz</p>
+
+                    <p>⑥ Mit optionalen <span class="fw-bold">Kompressor Schallschutzummantelungen</span></p>
+
+                    <p>⑦ <span class="fw-bold">Schallmindernde Ventilatortechnik</span> erhältlich</p>
+                </div>
+                <div class="col-xl-5"><p>⑧ <span class="fw-bold">Scroll, Multiscroll</span> und <span class="fw-bold">Schraubenkompressoren</span>
+                    (optional
+                    mit Frequenzumrichter) erhältlich</p>
+
+                    <p>⑨ <span class="fw-bold">Automatische Leistungssteuerung</span> für Prozesse mit
+                        variabler Kühllast</p>
+
+                    <p>⑩ <span class="fw-bold">Kleine Kältemittelvolumen</span> dank extrakompakter
+                        Bauweise</p>
+
+                    <p>⑪ Auswahl aus <span class="fw-bold">verschiedenen Low-GWP Kältemitteln, u.a.
+                        R513a, R1234ze und R290 (Propan)</span></p>
+
+                    <p>⑫ Mit <span class="fw-bold">automatischen Glykol Nachfüllsystemem</span></p>
+
+                    <p>⑬ Mit <span class="fw-bold">Remote HMI</span></p>
+
+                    <p>⑭ <span class="fw-bold">Erhöhte Betriebssicherheit mit bis zu 4 Kühlkreisläufen</span>
+                        pro Maschine</p>
+                </div>
+            </div>
+        </div>
+        <div style="background: #FBFBFC"><br/>
+        <div class="text-center" style="font-size: xxx-large;">BILDER</div>
+            <br/>
+            <div class="text-center d-flex justify-content-xl-center">
+                <img src="image/asv4.png" alt="asv4">
+            </div>
+            <div class="col d-flex justify-content-xl-center" style="margin-left: -200px">
+               <div style="position: relative; left: 0; top: 0;">
+                <img src="image/rec.png" alt="rec" class="child">
+                <img src="image/fg.png" alt="fg" class="parent">
+               </div>
+            </div>
+        </div>
     </div>
 </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-            crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
