--- a/les8/index8.html
+++ b/les8/index8.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+      xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -243,24 +244,21 @@
                     </div>
                 </div>
             </div>
-
             <div style="background: #FBFBFC">
                 <div class="text-center">BILDER</div>
-                <div class="d-flex justify-content-xl-center">
+                <div class="d-flex justify-content-center">
                     <img src="image/asv4.png">
                 </div>
-
-                <div class="col d-flex justify-content-xl-center" style="margin-left: -200px">
+                <div class="row d-flex align-items-center" style="margin-left: 340px;">
                     <div style="position: relative; left: 0; top: 0;">
                         <img src="image/rec.png" class="child"/>
                         <img src="image/fg.png" class="parent"/>
                     </div>
-                    <div style="position: relative; left: 0; top: 0;">
+                    <div style="position: relative; left: 0; top: 0; margin-left: 150px;">
                         <img src="image/rec.png" class="child"/>
                         <img src="image/fgg.png" class="parent"/>
                     </div>
-
-                    <div class="d-flex justify-content-between">
+                    <div style="margin-left: 300px;">
                         <img src="image/Ellipse.png" class="eclipes">
                         <img src="image/Ellip.png" class="eclipes">
                         <img src="image/Ellip.png" class="eclipes">
@@ -272,8 +270,60 @@
         <br/>
         <br/>
         <br/>
+        <br/>
         <div style="background: #FBFBFC">
-            <div class="text-center">BILDER</div>
+            <div class="text-center" style="font-size: xx-large;" :>BESUCHER DIESER SEITE SUCHTEN AUCH OFT NACH:</div>
+            <br/>
+            <div class="d-flex flex-wrap" style="margin-left: 120px">
+                <div class="divCards">GLYKOLWANNEN</div>
+                <div class="divCards">WASSERAUFBEREITUNG</div>
+                <div class="divCards">ROHRLEITUNGSBAU</div>
+                <div class="divCards">Wärmemengenmessungen</div>
+                <div class="divCards">ANLAGELEASING</div>
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="d-flex justify-content-around"
+             style="border-bottom: 1px solid darkgray; border-top: 1px solid darkgray">
+            <h2 style="color: #1652AC; font-size: xx-large">Jetzt Termin vereinbaren!</h2>
+            <div>
+                <div style="max-width: 400px">
+                    Gerne stehen wir Ihnen für eine individuelle Beratung telefonisch und vor Ort zur Verfügung und
+                    freuen
+                    uns über Ihre Kontaktaufnahme. Sprechen Sie uns an!
+
+                    Fragen Sie nach einem Rückruf oder kontaktieren Sie uns unter: <span style="color:#163DA1">info@elsasser-technik.de</span>
+                </div>
+                <button class="kontaktButton">Kontakt</button>
+            </div>
+            <div>
+                <img src="image/Lo3.png" alt="Lo3">
+            </div>
+        </div>
+        <br/>
+        <br/>
+        <br/>
+        <div class="d-flex justify-content-between" style="height: 150px">
+            <div>
+                <h4>Elsässer Kältetechnik</h4> Königsallee 14
+                40212 Düsseldorf
+            </div>
+            <div>
+                <h4>Kontakt</h4>
+                Telefon:<span class="fw-bold">+49 (0) 211 9232 3052</span>
+                E-Mail: <span style="color:#163DA1">info@elsasser-technik.de</span>
+            </div>
+            <div>
+                <h4>Shortlinks</h4>
+                Kontakt
+                Rückruf vereinbaren
+            </div>
+            <br/>
+            <div>Impressum
+                Datenschutz
+            </div>
         </div>
     </div>
 </div>
