--- a/les9/index9.html
+++ b/les9/index9.html
@@ -46,7 +46,8 @@
 <div id="searchContent" class="d-flex justify-content-around">
     <div class="catalog">
         <img src="imag/ooo.png" alt="ooo">
-        Каталог</div>
+        Каталог
+    </div>
     <div>
         <input type="text" placeholder="Поиск по наименованию или артикулу" id="searchlnput">
         <button id="searchButton">Найти</button>
@@ -55,21 +56,40 @@
         <img src="imag/Grouu.png" alt="Grouu">
     </div>
 </div>
-<div>
+<div style="margin-left: 50px">
     <img style="position: absolute" src="imag/stena.png" alt="stena">
     <div style="position: relative; display: flex; flex-direction:row">
         <div style="margin-left: 120px; margin-top: 100px">
-        <div style="color: #0A1A2C; font-size: 36px";>Сцепление в сборе</div>
-        <div style="color: #717171; font-size: 20px";>0AMCLUTCH</div>
-        <div style="color: #005BB9; font-size: 37px";>14 499,99 ₽</div>
-        <button id="searchButto">
-            <img src="imag/qww.png" alt="qww">
-        </button>
+            <div style="color: #0A1A2C; font-size: 36px" ;>Сцепление в сборе</div>
+            <div style="color: #717171; font-size: 20px" ;>0AMCLUTCH</div>
+            <div style="color: #005BB9; font-size: 37px" ;>14 499,99 ₽</div>
+            <button id="searchButto">
+                <img src="imag/qww.png" alt="qww">
+            </button>
         </div>
         <img src="imag/col.png" alt="col">
     </div>
-    <div></div>
-    <div></div>
+</div>
+<div style="background: #F4F5FA; max-width: 340px;">
+    <div style="margin-left: 40px; margin-top: 60px;">Акция</div>
+    <div style="display: flex; flex-direction: row; justify-content: center">
+        <img style="width: 90px; height: 75px;" src="imag/asdd.png" alt="asdd">
+        <div>Обгонная муфта <br/>
+            гидротрансформатор<br/>
+            BW-SP-2 SONNAX<br/>
+            <span style="color: #FFB800;">4 430₽ <s style="color: #C2C5DA">5 430₽</s></span>
+            <button class="buyButton">
+                <img src="imag/teleshka.png" alt="teleshka">
+            </button>
+        </div>
+    </div>
+</div>
+<div>
+    <div>Акция</div>
+    <div>
+        <div>Комплект фрикционных дисков</div>
+        <img src="imag/asd.png" alt="asd">
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
