--- a/les9/index9.html
+++ b/les9/index9.html
@@ -56,41 +56,201 @@
         <img src="imag/Grouu.png" alt="Grouu">
     </div>
 </div>
-<div style="margin-left: 50px">
+<div style="margin-left: 150px">
     <img style="position: absolute" src="imag/stena.png" alt="stena">
     <div style="position: relative; display: flex; flex-direction:row">
         <div style="margin-left: 120px; margin-top: 100px">
             <div style="color: #0A1A2C; font-size: 36px" ;>Сцепление в сборе</div>
             <div style="color: #717171; font-size: 20px" ;>0AMCLUTCH</div>
             <div style="color: #005BB9; font-size: 37px" ;>14 499,99 ₽</div>
-            <button id="searchButto">
+            <button class="searchButto">
                 <img src="imag/qww.png" alt="qww">
             </button>
         </div>
         <img src="imag/col.png" alt="col">
     </div>
 </div>
-<div style="background: #F4F5FA; max-width: 340px;">
-    <div style="margin-left: 40px; margin-top: 60px;">Акция</div>
-    <div style="display: flex; flex-direction: row; justify-content: center">
-        <img style="width: 90px; height: 75px;" src="imag/asdd.png" alt="asdd">
-        <div>Обгонная муфта <br/>
-            гидротрансформатор<br/>
-            BW-SP-2 SONNAX<br/>
-            <span style="color: #FFB800;">4 430₽ <s style="color: #C2C5DA">5 430₽</s></span>
-            <button class="buyButton">
-                <img src="imag/teleshka.png" alt="teleshka">
-            </button>
+<div style="margin-left: 1200px; margin-top: -20%">
+    <div style="background: #F4F5FA; max-width: 340px;">
+        <div style="margin-left: 40px; margin-top: 60px;"><br/>Акция<br/></div>
+        <div style="display: flex; flex-direction: row; justify-content: center">
+            <img style="width: 90px; height: 75px;" src="imag/asdd.png" alt="asdd">
+            <div>Обгонная муфта <br/>
+                гидротрансформатор<br/>
+                BW-SP-2 SONNAX<br/>
+                <span style="color: #FFB800;">4 430₽ <s style="color: #C2C5DA">5 430₽</s></span>
+                <button class="buyButton">
+                    <img src="imag/teleshka.png" alt="teleshka">
+                </button>
+            </div>
+        </div>
+    </div>
+    <div style="background: #F4F5FA; max-width: 340px;">
+        <div style="margin-left: 40px; margin-top: 60px;"><br/>Акция<br/></div>
+        <div style="display: flex; flex-direction: row; justify-content: center">
+            <img style="width: 90px; height: 75px;" src="imag/asd.png" alt="asd">
+            <div>Комплект фрикционных<br/>дисков<br/>
+                BW-SP-2 SONNAX<br/>
+                <span style="color: #FFB800;">4 430₽ <s style="color: #C2C5DA">5 430₽</s></span>
+                <button class="buyButton">
+                    <img src="imag/teleshka.png" alt="teleshka">
+                </button>
+            </div>
         </div>
     </div>
 </div>
-<div>
-    <div>Акция</div>
-    <div>
-        <div>Комплект фрикционных дисков</div>
-        <img src="imag/asd.png" alt="asd">
+
+
+<div style="display: flex; flex-direction: row; justify-content: center">
+    <div style="display: flex; flex-direction: row">
+        <div style="display: flex; flex-direction: row; border: 1px solid grey; border-radius: 6px; width: 430px; justify-content: center; margin-right: 20px;">
+            <div style="margin-top: 40px; margin-right: 40px; margin-left: 40px">
+                <b>Масла</b> <br/>
+                Трансмиссионное масло;<br/>
+                присалка в масло акпп
+                <button class="goButton">Перейти</button>
+            </div>
+            <div>
+                <img src="imag/pov.png" height="202" width="154"/>
+            </div>
+        </div>
+    </div>
+    <div style="display: flex; flex-direction: row">
+        <div style="display: flex; flex-direction: row; border: 1px solid grey; border-radius: 6px; width: 430px; justify-content: center; margin-right: 20px;">
+            <div style="margin-top: 40px; margin-right: 40px; margin-left: 40px">
+                <b>Фильтры</b> <br/>
+                Масляный фильтр;<br/>
+                фильтр воздушный
+                <button class="goButton">Перейти</button>
+            </div>
+            <div>
+                <img src="imag/pov2.png" height="202" width="154"/>
+            </div>
+        </div>
+    </div>
+    <div style="display: flex; flex-direction: row">
+        <div style="display: flex; flex-direction: row; border: 1px solid grey; border-radius: 6px; width: 430px; justify-content: center; margin-right: 20px;">
+            <div style="margin-top: 40px; margin-right: 40px; margin-left: 40px">
+                <b>Радиаторы</b> <br/>
+                Дополнительные
+                радиаторы<br/>
+                <button class="goButton">Перейти</button>
+            </div>
+            <div>
+                <img src="imag/pov3.png" height="202" width="154"/>
+            </div>
+        </div>
     </div>
 </div>
+
+<div style="margin-top: 100px; margin-left: 150px">
+    <button class="whoButton">Подборки товаров</button>
+    <button class="iButton">Акции</button>
+    <button class="youButton">Сейчас покупают</button>
+</div>
+
+<div style="display: flex; flex-direction: row; justify-content: center" class="marginBlock">
+        <div>
+            <img src="imag/lk.png" height="216" width="260"/>
+            <div style="display: flex; flex-direction: row">
+                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+                <div style="color: #FFB800;">4.5</div>
+                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+            </div>
+            <div>Intermediate accumelator sleeve</div>
+            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+            <button class="searchButto">
+                <img src="imag/qww.png" alt="qww">
+            </button>
+        </div><div>
+            <img src="imag/asd.png" height="216" width="260"/>
+            <div style="display: flex; flex-direction: row">
+                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+                <div style="color: #FFB800;">4.5</div>
+                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+            </div>
+            <div>Intermediate accumelator sleeve</div>
+            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+            <button class="searchButto">
+                <img src="imag/qww.png" alt="qww">
+            </button>
+        </div><div>
+            <img src="imag/lk.png" height="216" width="260"/>
+            <div style="display: flex; flex-direction: row">
+                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+                <div style="color: #FFB800;">4.5</div>
+                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+            </div>
+            <div>Intermediate accumelator sleeve</div>
+            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+            <button class="searchButto">
+                <img src="imag/qww.png" alt="qww">
+            </button>
+        </div><div>
+            <img src="imag/pol.png" height="216" width="260"/>
+            <div style="display: flex; flex-direction: row">
+                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+                <div style="color: #FFB800;">4.5</div>
+                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+            </div>
+            <div>Intermediate accumelator sleeve</div>
+            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+            <button class="searchButto">
+                <img src="imag/qww.png" alt="qww">
+            </button>
+        </div>
+</div><div style="display: flex; flex-direction: row; justify-content: center" class="marginBlock">
+        <div>
+            <img src="imag/lk.png" height="216" width="260"/>
+            <div style="display: flex; flex-direction: row">
+                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+                <div style="color: #FFB800;">4.5</div>
+                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+            </div>
+            <div>Intermediate accumelator sleeve</div>
+            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+            <button class="searchButto">
+                <img src="imag/qww.png" alt="qww">
+            </button>
+        </div><div>
+            <img src="imag/asd.png" height="216" width="260"/>
+            <div style="display: flex; flex-direction: row">
+                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+                <div style="color: #FFB800;">4.5</div>
+                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+            </div>
+            <div>Intermediate accumelator sleeve</div>
+            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+            <button class="searchButto">
+                <img src="imag/qww.png" alt="qww">
+            </button>
+        </div><div>
+            <img src="imag/lk.png" height="216" width="260"/>
+            <div style="display: flex; flex-direction: row">
+                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+                <div style="color: #FFB800;">4.5</div>
+                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+            </div>
+            <div>Intermediate accumelator sleeve</div>
+            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+            <button class="searchButto">
+                <img src="imag/qww.png" alt="qww">
+            </button>
+        </div><div>
+            <img src="imag/pol.png" height="216" width="260"/>
+            <div style="display: flex; flex-direction: row">
+                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+                <div style="color: #FFB800;">4.5</div>
+                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+            </div>
+            <div>Intermediate accumelator sleeve</div>
+            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+            <button class="searchButto">
+                <img src="imag/qww.png" alt="qww">
+            </button>
+        </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
