--- a/les9/index9.html
+++ b/les9/index9.html
@@ -150,105 +150,250 @@
 </div>
 
 <div style="display: flex; flex-direction: row; justify-content: center" class="marginBlock">
-        <div>
-            <img src="imag/lk.png" height="216" width="260"/>
-            <div style="display: flex; flex-direction: row">
-                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
-                <div style="color: #FFB800;">4.5</div>
-                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
-            </div>
-            <div>Intermediate accumelator sleeve</div>
-            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
-            <button class="searchButto">
-                <img src="imag/qww.png" alt="qww">
-            </button>
-        </div><div>
-            <img src="imag/asd.png" height="216" width="260"/>
-            <div style="display: flex; flex-direction: row">
-                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
-                <div style="color: #FFB800;">4.5</div>
-                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
-            </div>
-            <div>Intermediate accumelator sleeve</div>
-            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
-            <button class="searchButto">
-                <img src="imag/qww.png" alt="qww">
-            </button>
-        </div><div>
-            <img src="imag/lk.png" height="216" width="260"/>
-            <div style="display: flex; flex-direction: row">
-                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
-                <div style="color: #FFB800;">4.5</div>
-                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
-            </div>
-            <div>Intermediate accumelator sleeve</div>
-            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
-            <button class="searchButto">
-                <img src="imag/qww.png" alt="qww">
-            </button>
-        </div><div>
-            <img src="imag/pol.png" height="216" width="260"/>
-            <div style="display: flex; flex-direction: row">
-                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
-                <div style="color: #FFB800;">4.5</div>
-                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
-            </div>
-            <div>Intermediate accumelator sleeve</div>
-            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
-            <button class="searchButto">
-                <img src="imag/qww.png" alt="qww">
-            </button>
+    <div>
+        <img src="imag/lk.png" height="216" width="260"/>
+        <div style="display: flex; flex-direction: row">
+            <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+            <div style="color: #FFB800;">4.5</div>
+            <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
         </div>
-</div><div style="display: flex; flex-direction: row; justify-content: center" class="marginBlock">
-        <div>
-            <img src="imag/lk.png" height="216" width="260"/>
-            <div style="display: flex; flex-direction: row">
-                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
-                <div style="color: #FFB800;">4.5</div>
-                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
-            </div>
-            <div>Intermediate accumelator sleeve</div>
-            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
-            <button class="searchButto">
-                <img src="imag/qww.png" alt="qww">
-            </button>
-        </div><div>
-            <img src="imag/asd.png" height="216" width="260"/>
-            <div style="display: flex; flex-direction: row">
-                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
-                <div style="color: #FFB800;">4.5</div>
-                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
-            </div>
-            <div>Intermediate accumelator sleeve</div>
-            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
-            <button class="searchButto">
-                <img src="imag/qww.png" alt="qww">
-            </button>
-        </div><div>
-            <img src="imag/lk.png" height="216" width="260"/>
-            <div style="display: flex; flex-direction: row">
-                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
-                <div style="color: #FFB800;">4.5</div>
-                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
-            </div>
-            <div>Intermediate accumelator sleeve</div>
-            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
-            <button class="searchButto">
-                <img src="imag/qww.png" alt="qww">
-            </button>
-        </div><div>
-            <img src="imag/pol.png" height="216" width="260"/>
-            <div style="display: flex; flex-direction: row">
-                <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
-                <div style="color: #FFB800;">4.5</div>
-                <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
-            </div>
-            <div>Intermediate accumelator sleeve</div>
-            <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
-            <button class="searchButto">
-                <img src="imag/qww.png" alt="qww">
-            </button>
+        <div>Intermediate accumelator sleeve</div>
+        <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+        <button class="searchButto">
+            <img src="imag/qww.png" alt="qww">
+        </button>
+    </div>
+    <div>
+        <img src="imag/asd.png" height="216" width="260"/>
+        <div style="display: flex; flex-direction: row">
+            <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+            <div style="color: #FFB800;">4.5</div>
+            <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
         </div>
+        <div>Intermediate accumelator sleeve</div>
+        <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+        <button class="searchButto">
+            <img src="imag/qww.png" alt="qww">
+        </button>
+    </div>
+    <div>
+        <img src="imag/lk.png" height="216" width="260"/>
+        <div style="display: flex; flex-direction: row">
+            <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+            <div style="color: #FFB800;">4.5</div>
+            <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+        </div>
+        <div>Intermediate accumelator sleeve</div>
+        <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+        <button class="searchButto">
+            <img src="imag/qww.png" alt="qww">
+        </button>
+    </div>
+    <div>
+        <img src="imag/pol.png" height="216" width="260"/>
+        <div style="display: flex; flex-direction: row">
+            <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+            <div style="color: #FFB800;">4.5</div>
+            <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+        </div>
+        <div>Intermediate accumelator sleeve</div>
+        <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+        <button class="searchButto">
+            <img src="imag/qww.png" alt="qww">
+        </button>
+    </div>
+</div>
+<div style="display: flex; flex-direction: row; justify-content: center" class="marginBlock">
+    <div>
+        <img src="imag/lk.png" height="216" width="260"/>
+        <div style="display: flex; flex-direction: row">
+            <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+            <div style="color: #FFB800;">4.5</div>
+            <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+        </div>
+        <div>Intermediate accumelator sleeve</div>
+        <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+        <button class="searchButto">
+            <img src="imag/qww.png" alt="qww">
+        </button>
+    </div>
+    <div>
+        <img src="imag/asd.png" height="216" width="260"/>
+        <div style="display: flex; flex-direction: row">
+            <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+            <div style="color: #FFB800;">4.5</div>
+            <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+        </div>
+        <div>Intermediate accumelator sleeve</div>
+        <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+        <button class="searchButto">
+            <img src="imag/qww.png" alt="qww">
+        </button>
+    </div>
+    <div>
+        <img src="imag/lk.png" height="216" width="260"/>
+        <div style="display: flex; flex-direction: row">
+            <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+            <div style="color: #FFB800;">4.5</div>
+            <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+        </div>
+        <div>Intermediate accumelator sleeve</div>
+        <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+        <button class="searchButto">
+            <img src="imag/qww.png" alt="qww">
+        </button>
+    </div>
+    <div>
+        <img src="imag/pol.png" height="216" width="260"/>
+        <div style="display: flex; flex-direction: row">
+            <img src="img/Star%202.png" style="width: 16px; height: 16px;"/>
+            <div style="color: #FFB800;">4.5</div>
+            <div>&nbsp;&nbsp;&nbsp;10 отзывов</div>
+        </div>
+        <div>Intermediate accumelator sleeve</div>
+        <div>ЦЕНА <b style="color: #005BB9;">по запросу</b></div>
+        <button class="searchButto">
+            <img src="imag/qww.png" alt="qww">
+        </button>
+    </div>
+</div>
+
+<div style=" margin-left: 907px; margin-top: 80px">
+    <button class="etoButton">
+        Показать еще
+    </button>
+    <br/>
+</div>
+<br/>
+<br/>
+<div style="margin-left: 380px;"><b>НОВОСТИ</b></div>
+<div>
+    <img src="imag/poloska.png" style="max-width: 100%;"/>
+</div>
+<div style="display: flex; flex-direction: row; justify-content: center">
+    <div style="margin-right: 50px;max-width: 285px;">
+        <div style="background: black; color: white; display: flex; justify-content: center; width: 106px; height: 20px;">
+            3 ноября
+        </div>
+        <div style="color: #005BB9; text-decoration: underline #005BB9">Изменения на сайте</div>
+        <br/>
+        <div>Недавно на сайте мы ввели
+            очередную порцию изменений,
+            которые, как нам кажется, должны
+            улучшить функциональность сайта
+            и сделать его более удобным для
+            пользователей. Реакция посетителей
+            не заставила себя долго ждать...
+        </div>
+    </div>
+    <div style="margin-right: 25px; margin-left: 25px; max-width: 285px;">
+        <div style="background: black; color: white; display: flex; justify-content: center; width: 106px; height: 20px;">
+            2 ноября
+        </div>
+        <div style="color: #005BB9; text-decoration: underline #005BB9">Вышла новая версия для
+            мобильных приложений
+        </div>
+        <br/>
+        <div>Что нового в 2.0:
+            — добавлена история поиска;
+            — добавлена синхронизация с сервером;
+            — испрвление ошибок.
+        </div>
+    </div>
+    <div style="margin-right: 25px; margin-left: 25px;max-width: 285px;">
+        <div style="background: black; color: white; display: flex; justify-content: center; width: 106px; height: 20px;">
+            1 ноября
+        </div>
+        <div style="color: #005BB9; text-decoration: underline #005BB9">Очередная порция обновлений для
+            мобильных приложений
+        </div>
+        <br/>
+        <div>Что нового добавлено:
+            — поддержка пуш-уведомлений;
+            — разделы для покупателей;
+            — просмотр покупателя в заказах;
+            — возможность поиска;
+            — исправление ошибок.
+        </div>
+    </div>
+    <div style="margin-left: 25px; max-width: 285px;">
+        <div style="background: black; color: white; display: flex; justify-content: center; width: 106px; height: 20px;">
+            31 октября
+        </div>
+        <div style="color: #005BB9; text-decoration: underline #005BB9">Интерфейс заказов для покупателей
+            стал более функциональным
+        </div>
+        <br/>
+        <div>Он позволяет выводить все
+            формируемые системой
+            уведомления(e-mail, смс, web) в
+            едином окне с системой удобной
+            фильтрации поиска.
+        </div>
+    </div>
+</div>
+<br/>
+<br/>
+<br/>
+<br/>
+<div style="width: 100%;height: 408px;left: 0px;top: 2554px;background: #0C1A2A;display: flex; flex-direction: row;">
+    <div style="margin-left: 360px; color:#868DAC">
+        <b>КАТАЛОГ</b>
+        <br/>
+        <br/>
+        <div style="color: #FBFBFC">
+            Каталог запчастей
+            <br/>
+            <br/>
+            Масла
+            <br/>
+            <br/>
+            Фильтра
+            <br/>
+            <br/>
+            Радиаторы
+            <br/>
+            <br/>
+            Sonnax
+            <br/>
+            <br/>
+            Manual
+            <br/>
+            <br/>
+            Новинки
+            <br/>
+            <br/>
+            Акции
+            <br/>
+        </div>
+    </div>
+    <div style="margin-left: 180px; color:#868DAC">
+        <b>РУБРИКАТОР</b>
+        <br/>
+        <br/>
+        <div style="color: #FBFBFC">
+            Доставка
+            <br/>
+            <br/>
+            Оплата
+            <br/>
+            <br/>
+            Гарантия
+            <br/>
+            <br/>
+            Новости
+            <br/>
+            <br/>
+            Журнал
+            <br/>
+            <br/>
+            О магазине
+            <br/>
+            <br/>
+            Контактная информация
+            <br/>
+        </div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
