--- a/les9/index9.html
+++ b/les9/index9.html
@@ -337,6 +337,7 @@
 <br/>
 <br/>
 <div style="width: 100%;height: 408px;left: 0px;top: 2554px;background: #0C1A2A;display: flex; flex-direction: row;">
+    <br/>
     <div style="margin-left: 360px; color:#868DAC">
         <b>КАТАЛОГ</b>
         <br/>
@@ -367,6 +368,7 @@
             <br/>
         </div>
     </div>
+    <br/>
     <div style="margin-left: 180px; color:#868DAC">
         <b>РУБРИКАТОР</b>
         <br/>
@@ -394,8 +396,70 @@
             <br/>
         </div>
     </div>
+    <br/>
+    <div style="margin-left: 180px; color:#868DAC">
+        <b>ИНФОРМАЦИЯ</b>
+        <br/>
+        <br/>
+        <div style="color: #FBFBFC">
+            Пользовательское соглашение
+            об использовании персональных данных
+            <br/>
+            <br/>
+            Политика конфиденциальности
+            <br/>
+            <br/>
+            Соглашение на рассылку
+            рекламных материалов
+            <br/>
+            <br/>
+            Политика возвратов
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            Мы принимаем
+            <br/>
+            <img src="imag/visa.png" height="45" width="114"/>
+        </div>
+    </div>
+    <div style="margin-left: 60px; color:#868DAC">
+        <b>КОНТАКТЫ</b>
+        <br/>
+        <br/>
+        <div style="color: #FBFBFC">
+            +7 383 291 92 86
+            info@avt-zap.ru
+            </div>
+        <div style="color:#868DAC">
+            <br/>
+            <br/>
+            Мы онлайн, воспользуйтесь<p style="color: white">Форма обратной связи</p>
+            <br/>
+            <br/>
+            Подпишитесь на нашу расслыку и
+            вы первыми узнаете о скидках и акциях
+            <br/>
+            <br/>
+        </div>
+    </div>
+<!--    <div>-->
+<!--        <div style="color:#868DAC">Мы онлайн, воспользуйтесь</div>-->
+<!--        <p style="color: white">Форма обратной связи</p>-->
+<!--        <div style="color:#868DAC">Подпишитесь на нашу расслыку и-->
+<!--            вы первыми узнаете о скидках и акциях</div>-->
+<!--        <div></div>-->
+<!--        <div></div>-->
+<!--    </div>-->
 </div>
-
+<!--<div>-->
+<!--    <div style="color:#868DAC">Мы онлайн, воспользуйтесь</div>-->
+<!--    Форма обратной связи-->
+<!--    <div style="color:#868DAC">Подпишитесь на нашу расслыку и-->
+<!--        вы первыми узнаете о скидках и акциях</div>-->
+<!--    <div></div>-->
+<!--    <div></div>-->
+<!--</div>-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
