--- a/les9/index9.html
+++ b/les9/index9.html
@@ -56,7 +56,7 @@
         <img src="imag/Grouu.png" alt="Grouu">
     </div>
 </div>
-<div style="margin-left: 150px">
+<div style="margin-left: 380px">
     <img style="position: absolute" src="imag/stena.png" alt="stena">
     <div style="position: relative; display: flex; flex-direction:row">
         <div style="margin-left: 120px; margin-top: 100px">
@@ -70,7 +70,7 @@
         <img src="imag/col.png" alt="col">
     </div>
 </div>
-<div style="margin-left: 1200px; margin-top: -20%">
+<div style="margin-left: 1400px; margin-top: -420px">
     <div style="background: #F4F5FA; max-width: 340px;">
         <div style="margin-left: 40px; margin-top: 60px;"><br/>Акция<br/></div>
         <div style="display: flex; flex-direction: row; justify-content: center">
@@ -424,33 +424,56 @@
         </div>
     </div>
     <div style="margin-left: 60px; color:#868DAC">
-        <b>КОНТАКТЫ</b>
-        <br/>
-        <br/>
-        <div style="color: #FBFBFC">
-            +7 383 291 92 86
-            info@avt-zap.ru
+        <div style="display: flex">
+        <div>
+            <b>КОНТАКТЫ</b>
+            <div style="color: #FBFBFC">
+                +7 383 291 92 86
+                <br/>
+                info@avt-zap.ru
             </div>
+        </div>
+        <div style="margin-left: 10px;">
+            <b>АДРЕС</b>
+            <div style="color: #FBFBFC">
+                г. Новосибирск,
+                <br/>
+                ул. Планировочная, 5, офис 105
+            </div>
+        </div>
+    </div>
         <div style="color:#868DAC">
             <br/>
             <br/>
-            Мы онлайн, воспользуйтесь<p style="color: white">Форма обратной связи</p>
+            Мы онлайн, воспользуйтесь <span style="color: white">Форма обратной связи</span>
             <br/>
             <br/>
             Подпишитесь на нашу расслыку и
+            <br/>
             вы первыми узнаете о скидках и акциях
             <br/>
             <br/>
         </div>
+        <div style="display: flex">
+            <input style="color: #ADBDD1; width: 300px" placeholder="Введите ваш email"/>
+            <button id="emailSendButton">Подписаться</button>
+        </div>
+        <br/>
+        <div class="socialRefs" style="margin-left: 250px;display: flex">
+            <img src="imag/Vecto1.png" height="20" width="11"/>
+            <img src="imag/Vecto2.png" height="20" width="22"/>
+            <img src="imag/Vecto3.png" height="18" width="20"/>
+            <img src="imag/Vecto4.png" height="26" width="26"/>
+        </div>
     </div>
-<!--    <div>-->
-<!--        <div style="color:#868DAC">Мы онлайн, воспользуйтесь</div>-->
-<!--        <p style="color: white">Форма обратной связи</p>-->
-<!--        <div style="color:#868DAC">Подпишитесь на нашу расслыку и-->
-<!--            вы первыми узнаете о скидках и акциях</div>-->
-<!--        <div></div>-->
-<!--        <div></div>-->
-<!--    </div>-->
+    <!--    <div>-->
+    <!--        <div style="color:#868DAC">Мы онлайн, воспользуйтесь</div>-->
+    <!--        <p style="color: white">Форма обратной связи</p>-->
+    <!--        <div style="color:#868DAC">Подпишитесь на нашу расслыку и-->
+    <!--            вы первыми узнаете о скидках и акциях</div>-->
+    <!--        <div></div>-->
+    <!--        <div></div>-->
+    <!--    </div>-->
 </div>
 <!--<div>-->
 <!--    <div style="color:#868DAC">Мы онлайн, воспользуйтесь</div>-->
