--- a/les9/index9.html
+++ b/les9/index9.html
@@ -25,6 +25,11 @@
     <div>О магазине</div>
     <div>Контакты</div>
 </div>
+<div class="mobileHeader"; style="display: flex">
+    <div>Ещё</div>
+    <div>Ваш город: Москва</div>
+
+</div>
 
 <div class="neheader">
     <div>
